# composition

./: .gitmodules  CMakeLists.txt  README.md
application/: CMakeLists.txt  main.cpp
data/testing/: test_path1.csv  test_path2.csv  test_path3.csv
dependencies/cmake/: boost.cmake  fast-cpp-csv-parser.cmake  helper.cmake
src/: CMakeLists.txt  path.cpp  path.h
src/applications/: CMakeLists.txt
src/applications/test1/: main.cpp  path_renderer.cpp  path_renderer.h
src/modules/: CMakeLists.txt
src/modules/path/: filter.h  path.h  path_manager.h  pathmanager.h  rect.h
src/modules/path.test/: filter.test.cpp  path.test.cpp  rect.test.cpp
src/modules/path/source/: filter.cpp  path.cpp  path_manager.cpp  pathmanager.cpp  rect.cpp
src/mousehook/: CMakeLists.txt
src/mousehook/hook/: main.cpp  mouse_listener.cpp  mouse_listener.h
test/: CMakeLists.txt  path.test.cpp
